# contour-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  contour_isobands_wasm.d.ts  contour_isobands_wasm.js  contour_isobands_wasm_bg.js  contour_isobands_wasm_bg.wasm  contour_isobands_wasm_bg.wasm.d.ts  contour_wasm.js  contour_wasm_bg.js  contour_wasm_bg.wasm  index.html
example/: dem_big.json  index.html  pot_pop_fr.json  volcano.json
src/: lib.rs
tests/: web.rs
