[package]
name = "contour-wasm"
version = "0.3.0"
authors = ["Matthieu Viry <matthieu.viry@cnrs.fr>"]
edition = "2021"
license = "AGPL-3.0-or-later"

description = "JS/WASM library to compute isolines and isobands (using marching squares algorithm)"
repository = "https://github.com/mthh/contour-wasm"
homepage = "https://github.com/mthh/contour-wasm"
readme = "README.md"
keywords = ["contour", "polygon", "isobands", "marching-squares", "geojson"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
contour = { version = "0.12", features = ["geojson"] }
contour-isobands = { version = "0.4", features = ["geojson"] }
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[profile.release]
opt-level = 3
